directstream from environment

--- a/environment/directstream/etc/directstream.properties
+++ b/environment/directstream/etc/directstream.properties
@@ -11,7 +11,7 @@ config.source.dummyapi.s3secret=dummysecret
 config.source.dummyapi.bootstrap.servers=kafka1:9092
 config.source.dummyapi.schema.registry.schema.registry.url=http://schema-registry:8081/
 
-coldset.client.catalog-uri=http://rest:8181/
+coldset.client.uri=http://rest:8181/
 coldset.client.rest.sigv4-enabled=true
 coldset.client.rest.access-key-id=admin
 coldset.client.rest.secret-access-key=password
