exclude demos from run_all

--- a/environment/streambased-docker-compose.part.yaml
+++ b/environment/streambased-docker-compose.part.yaml
@@ -1,7 +1,7 @@
 
   directstream:
-    image: local/directstream:latest
-    #image: streambased/directstream:latest
+    #image: local/directstream:latest
+    image: streambased/directstream:latest
     hostname: directstream
     container_name: directstream
     platform: linux/amd64
