Updated run.sh and gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,5 @@ replay_pid*
 environment/shadowtraffic/**
 environment/docker-compose.yaml
 environment/shadowtraffic_license.env
+
+shadowtraffic-logs.txt
