test messages larger than max metadata size in directstream

--- a/environment/kafka-docker-compose.part.yaml
+++ b/environment/kafka-docker-compose.part.yaml
@@ -31,6 +31,7 @@
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT
       KAFKA_LOG_RETENTION_CHECK_INTERVAL_MS: 30000
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka1:9092
+      KAFKA_MESSAGE_MAX_BYTES: 30485760
 
   schema-registry:
     image: confluentinc/cp-schema-registry:7.5.0
