--- a/environment/streambased-docker-compose.part.yaml
+++ b/environment/streambased-docker-compose.part.yaml
@@ -1,7 +1,7 @@
 
   directstream:
     #image: local/directstream:latest
-    image: streambased/directstream:latest
+    image: streambased/dev-directstream:latest
     hostname: directstream
     container_name: directstream
     platform: linux/amd64
@@ -32,7 +32,7 @@
 
   hyperstream:
     #image: local/hyperstream:latest
-    image: streambased/hyperstream:latest
+    image: streambased/dev-hyperstream:latest
     container_name: hyperstream
     platform: linux/amd64
     ports:
@@ -73,7 +73,7 @@
 
   slipstream:
     #image: local/slipstream:latest
-    image: streambased/slipstream:latest
+    image: streambased/dev-slipstream:latest
     hostname: slipstream
     container_name: slipstream
     ports:
@@ -88,8 +88,9 @@
       - SINGLE_TENANT_MODE_CLUSTER_SCHEMA_REGISTRY_URL=http://schema-registry:8081
       - SINGLE_TENANT_MODE_CLUSTER_ADDITIONAL_SCHEMA_REGISTRY_CONFIG=""
       - AUTH_SECRET=CIGLbbr24MBq9svn7WyArCi1UJ0EqjTc
-      - HYPERSTREAM_EUROPE_WEST2_BASE_URL=http://dev-hyperstream-service:9088
-      - HYPERSTREAM_US_EAST1_BASE_URL=http://dev-hyperstream-service:9088
-      - HYPERSTREAM_US_WEST2_BASE_URL=http://dev-hyperstream-service:9088
+      - HYPERSTREAM_EU_WEST_2_BASE_URL=http://hyperstream:9088
+      - HYPERSTREAM_US_EAST_2_BASE_URL=http://hyperstream:9088
+      - HYPERSTREAM_US_WEST_2_BASE_URL=http://hyperstream:9088
       - OPENAI_API_KEY=nope
       - OPEN_AI_MODEL=gpt-4o-mini
+      - SAAS_MODE=true
