fix: Mac errors
fixed BASE_DIR typo
fixed missing platform for arm64, force amd64
added healthcheck to spark iceberg
added docker pull to start script

--- a/environment/streambased-docker-compose.part.yaml
+++ b/environment/streambased-docker-compose.part.yaml
@@ -49,8 +49,11 @@
     image: streambased/ksi:latest
     hostname: ksi
     container_name: ksi
+    platform: linux/amd64
     depends_on:
       schema-registry:
+        condition: service_healthy
+      spark-iceberg:
         condition: service_healthy
       rest:
         condition: service_started
@@ -76,6 +79,7 @@
     image: streambased/dev-slipstream:latest
     hostname: slipstream
     container_name: slipstream
+    platform: linux/amd64
     ports:
       - "3000:3000"
     environment:
