remove auth secret, not required for SINGLE_TENANT

--- a/environment/streambased-docker-compose.part.yaml
+++ b/environment/streambased-docker-compose.part.yaml
@@ -91,7 +91,7 @@
       - SINGLE_TENANT_MODE_CLUSTER_ADDITIONAL_KAFKA_CONFIG=""
       - SINGLE_TENANT_MODE_CLUSTER_SCHEMA_REGISTRY_URL=http://schema-registry:8081
       - SINGLE_TENANT_MODE_CLUSTER_ADDITIONAL_SCHEMA_REGISTRY_CONFIG=""
-      - AUTH_SECRET=CIGLbbr24MBq9svn7WyArCi1UJ0EqjTc
+      - AUTH_SECRET=""
       - HYPERSTREAM_EU_WEST_2_BASE_URL=http://hyperstream:9088
       - HYPERSTREAM_US_EAST_2_BASE_URL=http://hyperstream:9088
       - HYPERSTREAM_US_WEST_2_BASE_URL=http://hyperstream:9088
