--- a/environment/streambased-docker-compose.part.yaml
+++ b/environment/streambased-docker-compose.part.yaml
@@ -31,8 +31,8 @@
       - ISK_COLDSET_CLIENT_S3_REGION=us-east-1
 
   hyperstream:
-    image: local/hyperstream:latest
-    #image: streambased/dev-hyperstream:latest
+    #image: local/hyperstream:latest
+    image: streambased/dev-hyperstream:latest
     container_name: hyperstream
     platform: linux/amd64
     ports:
@@ -76,8 +76,8 @@
     command: [ "-c", "/opt/kroxylicious/config.yaml" ]
 
   slipstream:
-    image: local/slipstream:latest
-    #image: streambased/dev-slipstream:latest
+    #image: local/slipstream:latest
+    image: streambased/dev-slipstream:latest
     hostname: slipstream
     container_name: slipstream
     platform: linux/amd64
